# GLFWTraining

./: .gitignore  README.md
Content/: cube.obj~  cube2.obj~  cube3.obj~  land.flac  triangle.obj~
Include/: GT_Actor.h  GT_Aircraft.h  GT_Alphabet.h  GT_Audio.h  GT_Camera.h  GT_CreditScene.h  GT_Enemy.h  GT_Fighter.h  GT_GameoverScene.h  GT_GameplayScene.h  GT_HUD.h  GT_Image.h  GT_IntroScene.h  GT_Locator.h  GT_MenuScene.h  GT_Mesh.h  GT_Missile.h  GT_Model.h  GT_Objectives.h  GT_Ocean.h  GT_Parser.h  GT_Particle.h  GT_PauseScene.h  GT_Predator.h  GT_Primitive.h  GT_Radar.h  GT_Raptor.h  GT_Rocket.h  GT_SManager.h  GT_Scene.h  GT_ServiceLocator.h  GT_Shader.h  GT_Skybox.h  GT_Terrain.h  GT_Texture.h  GT_USSCarrier.h  GT_Utils.h  GT_Warehouse.h  GT_Weapon.h
Lib/: libGL.so.1  libtinyxml2.so.4.0.1
Shaders/: HUDShader.fs  HUDShader.vs  actorShader.fs  actorShader.vs  aircraftShader.fs  aircraftShader.gs  aircraftShader.vs  enemyShader.fs  enemyShader.gs  enemyShader.vs  fLampShader.fs  fontShader.fs  fontShader.vs  imageShader.fs  imageShader.vs  modelShader.fs  modelShader.vs  primitiveShader.fs  shader.fs  shader.fs~  shader.vs  skybox.fs  skybox.vs  terrainShader.fs  terrainShader.vs  vLampShader.vs
Source/: GT_Actor.cpp  GT_Aircraft.cpp  GT_Alphabet.cpp  GT_Audio.cpp  GT_Camera.cpp  GT_CreditScene.cpp  GT_Enemy.cpp  GT_Fighter.cpp  GT_GameoveScene.cpp  GT_GameoverScene.cpp  GT_GameplayScene.cpp  GT_HUD.cpp  GT_Image.cpp  GT_Intelligence.cpp  GT_IntroScene.cpp  GT_Locator.cpp  GT_MenuScene.cpp  GT_Missile.cpp  GT_Objectives.cpp  (+22 more)
build_support/: CMakeLists.txt
(+2 files in other folders)
